# cinicide

./: Cargo.toml
resources/: cinicide_gun.glb  crt.wgsl  fancy-no-view.wgsl  fancy.wgsl  psx-no-view.wgsl  psx.wgsl  skybox.glb  skybox.gltf  skybox.mtl  tree_gun.glb
src/: main.rs
